--- a/file_upload/Untitled.ipynb
+++ b/file_upload/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +11,24 @@
     "import time\n",
     "from datetime import datetime, timedelta \n",
     "\n",
-    "datafolder = 'testfiles'\n",
+    "datafolder = 'tests/testfiles'\n",
     "\n",
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = os.path.join(datafolder, \"correctcsv_notaginfo.csv\")\n",
+    "df = pd.read_csv(file_path, dayfirst=True, sep=\";\", skiprows=[1,2])\n",
+    "df = df.where(pd.notnull(df), None)\n",
+    "df = df.drop(df.columns[0], axis=1)\n",
+    "df.to_csv('pd_notnull.csv', sep=\";\")"
    ]
   },
   {
